template gallery overflow -y bug fixed

--- a/src/components/DownloadResume.css
+++ b/src/components/DownloadResume.css
@@ -168,6 +168,8 @@
     align-items: flex-start;
     flex-wrap: wrap;
     justify-content: space-around;
+    height: 80vh;
+    overflow-y: scroll;
 
 }
 
